Fix player popup is visible when player is expanded
Closes #126

--- a/src/app/shared/player/player.component.scss
+++ b/src/app/shared/player/player.component.scss
@@ -90,7 +90,7 @@
   #queue {
     position: fixed;
     right: 15px;
-    bottom: -320px;
+    bottom: -400px;
     z-index: 9;
     border-radius: $border-radius $border-radius 0 0;
     width: 400px;
